First commited as before_45959_rev2